<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_latest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/main_button_latest_gif"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/main_top_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_top_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/main_button_best_gif"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/main_hot_button"
        app:layout_constraintStart_toEndOf="@id/main_latest_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_hot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/main_button_hot_gif"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_top_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/data_state"
        app:layout_constraintEnd_toEndOf="@id/data_state"
        app:layout_constraintStart_toStartOf="@id/data_state"
        app:layout_constraintTop_toTopOf="@id/data_state" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_top_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/desc_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/navigation_buttons"
            app:layout_constraintTop_toBottomOf="@id/image_view"
            tools:text="Описание"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:id="@+id/navigation_buttons"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_text_view">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/white"
                app:srcCompat ="@drawable/ic_arrow_back"
                android:contentDescription="@null" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/forward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:srcCompat ="@drawable/ic_forward"
                android:contentDescription="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/error_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_top_button"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/error_desc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/retry_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/retry_button"
            android:textColor="@color/teal_700"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>